# tflite-rs

./: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  NOTICE  README.md  TESTING.md  rustfmt.toml
.github/: copilot-instructions.md
.github/workflows/: python.yml  release.yml  sbom.yml  test.yml  tflite.yml
crates/python/: Cargo.toml  README.md  edgefirst_tflite.pyi  pyproject.toml
crates/python/src/: archive.rs  camera_adaptor.rs  delegate.rs  dmabuf.rs  error.rs  interpreter.rs  lib.rs  metadata.rs  profiler.rs  tensor_utils.rs
crates/tflite/: Cargo.toml  README.md
crates/tflite-library/: pyproject.toml
crates/tflite-library/edgefirst_tflite_library/: __init__.py
crates/tflite-sys/: Cargo.toml  README.md  build.rs  update.sh  vendored.rs  vx_delegate_dmabuf.h  wrapper.h
crates/tflite-sys/src/: discovery.rs  ffi.rs  hal_ffi.rs  lib.rs  vx_ffi.rs  xnnpack_ffi.rs
crates/tflite-sys/tensorflow/compiler/mlir/lite/core/: model_builder_base.h
crates/tflite/src/: archive.rs  camera_adaptor.rs  delegate.rs  dmabuf.rs  error.rs  interpreter.rs  lib.rs  library.rs  metadata.rs  metadata_schema_generated.rs  model.rs  profiler.rs  schema_generated.rs  tensor.rs
crates/tflite/tests/: integration.rs  on_device.rs
crates/tflite/tests/common/: mod.rs
docs/superpowers/plans/: 2026-03-30-xnnpack-python-release.md
docs/superpowers/specs/: 2026-03-30-xnnpack-python-release-design.md
examples/async_pipeline/: Cargo.toml
examples/async_pipeline/src/: main.rs
examples/basic_inference/: Cargo.toml
examples/basic_inference/src/: main.rs
examples/camera_preprocessing/: Cargo.toml
examples/camera_preprocessing/src/: main.rs
examples/delegate_options/: Cargo.toml
examples/delegate_options/src/: main.rs
examples/dmabuf_zero_copy/: Cargo.toml
examples/dmabuf_zero_copy/src/: main.rs
examples/error_handling/: Cargo.toml
examples/error_handling/src/: main.rs
examples/metadata_extraction/: Cargo.toml
examples/metadata_extraction/src/: main.rs
examples/quantized_inference/: Cargo.toml
examples/quantized_inference/src/: main.rs
examples/yolov8/: Cargo.toml
examples/yolov8/python/: yolov8.py
examples/yolov8/src/: error.rs  main.rs
testdata/: generate_minimal.py  minimal.tflite  yolov8n-int8.imx95.tflite  yolov8n-int8.tflite  yolov8n-seg-combined-int8.tflite  yolov8n-seg-int8.imx95.tflite  yolov8n-seg-int8.tflite  yolov8n-seg-logical-int8.tflite  yolov8n-seg-smart-int8.tflite
