# SPDX-License-Identifier: Apache-2.0
# Copyright (c) 2025 Au-Zone Technologies. All Rights Reserved.

[workspace]
resolver = "2"
members = ["crates/tflite-sys", "crates/tflite", "examples/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
authors = ["Au-Zone Technologies <support@au-zone.com>"]
repository = "https://github.com/EdgeFirstAI/tflite-rs"
homepage = "https://edgefirst.ai"

[workspace.lints.rust]
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"

[workspace.dependencies]
edgefirst-tflite-sys = { version = "0.1.0", path = "crates/tflite-sys" }
edgefirst-tflite = { version = "0.1.0", path = "crates/tflite" }
