# SPDX-License-Identifier: Apache-2.0
# Copyright (c) 2025 Au-Zone Technologies. All Rights Reserved.

[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "edgefirst-tflite"
dynamic = ["version"]
description = "Python API for TFLite inference with EdgeFirst extensions"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [{ name = "Au-Zone Technologies", email = "support@au-zone.com" }]
keywords = ["tflite", "tensorflow-lite", "edgefirst", "inference", "npu"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]
dependencies = ["numpy>=1.24"]

[project.urls]
Homepage = "https://edgefirst.ai"
Repository = "https://github.com/EdgeFirstAI/tflite-rs"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "edgefirst_tflite"
