# SPDX-License-Identifier: Apache-2.0
# Copyright (c) 2025 Au-Zone Technologies. All Rights Reserved.

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "edgefirst-tflite-library"
version = "2.19.0"
description = "Pre-built TensorFlow Lite C API shared library for edgefirst-tflite"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [{ name = "Au-Zone Technologies", email = "support@au-zone.com" }]
keywords = ["tflite", "tensorflow-lite", "edgefirst"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
Homepage = "https://edgefirst.ai"
Repository = "https://github.com/EdgeFirstAI/tflite-rs"

[tool.setuptools]
packages = ["edgefirst_tflite_library"]

[tool.setuptools.package-data]
edgefirst_tflite_library = ["*.so", "*.dylib", "*.dll", "*.lib"]
