# SPDX-License-Identifier: Apache-2.0
# Copyright (c) 2025 Au-Zone Technologies. All Rights Reserved.

[package]
name = "yolov8"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
edgefirst-tflite = { path = "../../crates/tflite", features = [
    "dmabuf",
    "camera_adaptor",
    "metadata",
] }
edgefirst-hal = "0.11"
libc = "0.2"
ndarray = "0.16"

[lints]
workspace = true
